--- a/test-pipelines.yml
+++ b/test-pipelines.yml
@@ -1,42 +1,97 @@
-# Multiple stages and jobs on each stage test
 trigger:
+
 - none
+
+ 
+
 pool:
+
   vmImage: 'ubuntu-16.04'
 
-stages:
-- stage: First
-  jobs:
-  - job: A1
-    steps:
-    - script: echo This is the trigger.
-      displayName: 'ONE'
+ 
 
+stages:
+
+ 
+
+- stage: First
+
+  jobs:
+
+  - job: A1
+
+    strategy:
+
+      matrix:
+
+        ONE:
+
+          TestNumber: ONE
+
+        TWO:
+
+          TestNumber: TWO
+
+        THREE:
+
+          TestNumber: THREE
+
+    steps:
+
+   - script: echo This is a Test for test $(TestNumber).
+
+      displayName: 'First Step'
+
+ 
 
   - job: A2
-    steps:
-    - script: echo This is the trigger.
-      displayName: 'TWO'
 
-- stage: Second
-  jobs:
-  - job: B1
-    steps:
-    - script: echo This is the trigger.
-      displayName: 'THREE'
+    strategy:
 
-  - job: B2
-    steps:
-    - script: echo This is the trigger.
-      displayName: 'FOUR'
+        matrix:
 
-- stage: Third
-  jobs:
-  - job: C1
+          ONE:
+
+            TestNumber: ONE
+
+          TWO:
+
+            TestNumber: TWO
+
+          THREE:
+
+            TestNumber: THREE
+
     steps:
-    - script: echo This is the trigger.
-      displayName: 'FIVE'
-  - job: C2
+
+    - script: echo This is a Test for test $(TestNumber).
+
+      displayName: 'Second Step'
+
+ 
+
+ 
+
+  - job: A3
+
+    strategy:
+
+      matrix:
+
+        ONE:
+
+          TestNumber: ONE
+
+        TWO:
+
+          TestNumber: TWO
+
+        THREE:
+
+          TestNumber: THREE
+
     steps:
-    - script: echo This is the trigger.
-      displayName: 'SIX'
+
+    - script: echo This is a Test for test $(TestNumber).
+
+      displayName: 'Third Step'
